# sobesilka

./: .gitignore  CLAUDE.md  README.md  generate-api.bat  start-dev.bat
back/: README.md  main.py  orval.config.ts  pyproject.toml
back/front/src/features/chat/: index.ts
back/src/shared/api/: axios-instance.ts
front/: .gitignore  README.md  eslint.config.mjs  index.html  orval.config.ts  package-lock.json  package.json  rsbuild.config.ts  tailwind.config.js  tsconfig.json
front/src/: App.tsx
front/src/app/: App.tsx  index.css  index.ts
front/src/app/providers/: QueryProvider.tsx  ThemeProvider.tsx  index.ts
front/src/entities/: index.ts
front/src/features/: index.ts
front/src/features/audio-recording/: AudioRecorder.tsx  index.ts
front/src/features/audio-recording/components/: AudioDeviceSelector.tsx  PermissionWarning.tsx  RecordingButton.tsx  RecordingStatus.tsx  TranscriptionDisplay.tsx  index.ts
front/src/features/audio-recording/hooks/: useAudioRecorder.ts
front/src/features/chat/: ChatResponses.tsx
front/src/features/chat/hooks/: useWebSocket.ts
front/src/features/settings/: SettingsModal.tsx
front/src/pages/: index.ts
front/src/shared/api/: config.ts  index.ts  speech-gpt.ts
front/src/shared/components/: ErrorBoundary.tsx
front/src/shared/constants/: audio.ts  index.ts
front/src/shared/db/: index.ts
front/src/shared/hooks/: useToast.ts
front/src/shared/lib/: audio.ts  index.ts  websocket.ts
front/src/shared/types/: audio.ts  chat.ts  index.ts  websocket.ts
front/src/shared/ui/: index.ts
front/src/widgets/: index.ts
(+1 files in other folders)
